--- a/resources/css/layouts/_table-card-view.scss
+++ b/resources/css/layouts/_table-card-view.scss
@@ -46,6 +46,7 @@
 //================
 .articles-table-view .article-row img.article-img {
     height: 190px;
+    max-width: 285px;
 
     border-radius: 10px;
     object-fit: cover;
